# gbrain-ops

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  vendor-compat.yml
adapters/calendar/: calendar_collector.py  classify_archive.py  promote_archive.py  run_fresh_sync.sh
adapters/gmail/: classify_archive.py  email_collector.py  promote_archive.py  run_fresh_sync.sh
adapters/granola/: granola_collector.py  run_fresh_sync.sh
adapters/messages/: messages_collector.py  (+1 more)
config/: example.toml
docs/: ARCHITECTURE.md  EPIC_OPERATIONAL_PERSONAL_ASSISTANT_BRAIN_2026-07-11.md  IMPLEMENTATION_LOG.md  LOCAL_POSTGRES_GBRAIN_CUTOVER_2026-07-12.md  NORTH_STAR_PERSONAL_ASSISTANT_BRAIN_2026-07-11.md  NORTH_STAR_PERSONAL_ASSISTANT_BRAIN_2026-07-11.worklog.md  OPEN_SOURCE_READINESS.md  PERSONAL_EVIDENCE_RETRIEVAL.md
schemas/: collector-result.schema.json
scripts/: install_hermes_owner_mcp.py  install_owner_service.py  install_postgres_service.py  install_runtime_links.py  migrate_supplemental_state.ts  provision_owner_client.py  provision_owner_read_token.py  reconcile_archive.py  repair_postgres_page_metadata.ts  retrieve_personal_evidence.py  run_keyword_oracle.py  telegram_fresh_sync_cron.sh  verify_postgres_parity.ts
tests/: conftest.py  test_activation.py  test_control_plane_contracts.py  test_evidence_retrieval.py  test_keyword_oracle.py  test_owner_client.py  test_privacy_scan.py  test_provision_owner_client.py  test_sync_monitor.py  test_sync_runner.py
(+41 files in other folders)
